--- a/client/forestFocus.html
+++ b/client/forestFocus.html
@@ -610,7 +610,7 @@
           <span id="timer">25:00</span>
       </div>
       <div class="flex justify-center mb-8">
-          <select class="bg-blue-900/50 text-white px-4 py-2 rounded-lg border border-blue-400 backdrop-blur-sm">
+          <select id="time-select" class="bg-blue-900/50 text-white px-4 py-2 rounded-lg border border-blue-400 backdrop-blur-sm">
               <option value="5">5 minutes</option>
               <option value="10">10 minutes</option>
               <option value="15">15 minutes</option>
@@ -622,20 +622,75 @@
           </select>
       </div>
       <div class="flex justify-center space-x-4">
-          <button class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+          <button id="start-button" class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
               <i class="fa-solid fa-play"></i>
               <span>Start</span>
           </button>
-          <button class="bg-red-500 hover:bg-red-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+          <button id="stop-button" class="bg-red-500 hover:bg-red-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
               <i class="fa-solid fa-stop"></i>
               <span>Stop</span>
           </button>
-          <button class="bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+          <button id="reset-button" class="bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
               <i class="fa-solid fa-rotate"></i>
               <span>Reset</span>
           </button>
       </div>
   </div>
+  <script>
+    let timerInterval;
+    let remainingTime;
+    let isRunning = false;
+
+    const timerDisplay = document.getElementById('timer');
+    const timeSelect = document.getElementById('time-select');
+    const startButton = document.getElementById('start-button');
+    const stopButton = document.getElementById('stop-button');
+    const resetButton = document.getElementById('reset-button');
+
+    function updateTimerDisplay(minutes) {
+      timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:00`;
+    }
+
+    function startTimer(duration) {
+      let timer = duration * 60;
+      timerInterval = setInterval(() => {
+        let minutes = Math.floor(timer / 60);
+        let seconds = timer % 60;
+        timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+        if (--timer < 0) {
+          clearInterval(timerInterval);
+          isRunning = false;
+        }
+      }, 1000);
+    }
+
+    timeSelect.addEventListener('change', () => {
+      if (!isRunning) {
+        updateTimerDisplay(timeSelect.value);
+      }
+    });
+
+    startButton.addEventListener('click', () => {
+      if (!isRunning) {
+        isRunning = true;
+        remainingTime = timeSelect.value;
+        startTimer(remainingTime);
+      }
+    });
+
+    stopButton.addEventListener('click', () => {
+      clearInterval(timerInterval);
+      isRunning = false;
+    });
+
+    resetButton.addEventListener('click', () => {
+      if (!isRunning) {
+        updateTimerDisplay(remainingTime);
+      }
+    });
+
+    updateTimerDisplay(timeSelect.value);
+  </script>
 </div>
 </section>
 <footer id="footer" class="bg-blue-900 text-blue-100">
