--- a/client/userLogin.html
+++ b/client/userLogin.html
@@ -1,19 +1,5 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroicHabits</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>-->
-
 <!DOCTYPE html>
-<html lang="en">
+<html class="en">
               
 <head>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
@@ -592,148 +578,98 @@
 </script>
 </head>
         <body class="h-full text-base-content">
-          <div id="main-container" class="bg-gradient-to-b from-yellow-50 to-blue-50">
+          <div id="wrapper" class="relative bg-gradient-to-b from-sky-400 to-sky-600 overflow-hidden">
+<div class="absolute inset-0 bottom-20"> <img class="w-full h-full object-cover opacity-0" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/2706035b51-264a42c688573c5215f3.png" alt="pixel art style blue sky with white clouds, 8-bit retro gaming aesthetic">
+</div>
 <header id="header" class="fixed top-0 w-full bg-white/80 backdrop-blur-sm z-50 border-b border-blue-100">
-  <div class="container mx-auto px-6 py-4">
-      <div class="flex items-center justify-between">
-          <div class="flex items-center space-x-2">
-              <i class="fa-solid fa-gamepad text-blue-600 text-2xl"></i>
-              <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
-          </div>
-          <nav class="hidden md:flex space-x-8">
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
-          </nav>
-          <div class="flex items-center space-x-4">
-              <button class="text-blue-700 hover:text-blue-500">
-                  <i class="fa-regular fa-bell text-xl"></i>
-              </button>
-              <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-3.jpg" alt="Profile" class="w-10 h-10 rounded-full border-2 border-blue-300">
-          </div>
-      </div>
-  </div>
+    <div class="container mx-auto px-6 py-4">
+        <div class="flex items-center justify-between">
+            <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-gamepad text-blue-600 text-2xl"></i>
+                <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
+            </div>
+            <nav class="hidden md:flex space-x-8">
+                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
+                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
+                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
+                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
+            </nav>
+            <div class="flex items-center space-x-4">
+                <button class="text-blue-700 hover:text-blue-500">
+                    <i class="fa-regular fa-bell text-xl"></i>
+                </button>
+                <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-3.jpg" alt="Profile" class="w-10 h-10 rounded-full border-2 border-blue-300">
+            </div>
+        </div>
+    </div>
 </header>
-<section id="hero" class="pt-24 h-[600px] relative overflow-hidden">
-<img class="absolute inset-0 w-full h-full object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/273092d4c4-10b634e17123f9dc8a1c.png" alt="pixel art landscape with mystical mountains and floating islands in shades of blue and yellow, with glowing crystals and ethereal clouds, 16-bit style">
-<div class="relative container mx-auto px-6 py-20">
-  <div class="max-w-2xl">
-      <h2 class="text-4xl font-bold text-white mb-6">Level Up Your Life</h2>
-      <p class="text-xl text-white mb-8">Transform your daily habits into an epic adventure. Track, improve, and conquer your goals one quest at a time.</p>
-      <div class="flex space-x-4">
-          <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-8 py-3 rounded-lg">Start Your Journey</button>
+<main id="main" class="relative min-h-[800px] flex items-center justify-center">
+<div class="container mx-auto px-4 py-16">
+  <div class="max-w-md mx-auto bg-white/20 backdrop-blur-lg rounded-xl shadow-2xl p-8 border border-sky-300/30">
+      <div class="text-center mb-8">
+          <h1 class="text-3xl font-bold text-white mb-2">Welcome Back</h1>
+          <p class="text-sky-100">Continue your heroic journey</p>
       </div>
+      <form class="space-y-6">
+          <div>
+              <label class="block text-sky-100 mb-2" for="email">Email Address</label>
+              <input type="email" id="email" class="w-full px-4 py-3 bg-sky-800/30 border border-sky-300/30 rounded-lg text-white placeholder-sky-200 focus:outline-none focus:border-sky-400" placeholder="hero@example.com">
+          </div>
+          <div>
+              <label class="block text-sky-100 mb-2" for="password">Password</label>
+              <input type="password" id="password" class="w-full px-4 py-3 bg-sky-800/30 border border-sky-300/30 rounded-lg text-white placeholder-sky-200 focus:outline-none focus:border-sky-400" placeholder="••••••••">
+          </div>
+          <button class="w-full bg-gradient-to-r from-yellow-500 to-yellow-600 text-sky-900 font-bold py-3 px-4 rounded-lg hover:from-yellow-400 hover:to-yellow-500 transition-all duration-200">
+              Login to Your Quest
+          </button>
+      </form>
+      <p class="mt-6 text-center text-sky-100">
+          Not a current user? 
+          <span class="text-yellow-400 hover:text-yellow-300 cursor-pointer">Create an account now!</span>
+      </p>
   </div>
 </div>
-</section>
-<section id="scene-cards" class="py-16 container mx-auto px-6">
-  <h3 class="text-2xl font-bold text-blue-800 mb-8">Your Active Quests</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/21abd35af0-a38af54f0951f27fd82f.png" alt="pixel art forest scene with trees and mystical elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Forest of Focus</h4>
-              <p class="text-blue-600 text-sm mb-4">Complete daily meditation tasks</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 7/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/1acceabec3-38d674ae3a94cf57bab5.png" alt="pixel art mountain peaks with clouds, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Peak Performance</h4>
-              <p class="text-blue-600 text-sm mb-4">Fitness goals tracking</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 5/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <!-- to be inserted in phase 2
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/5fb43c4e64-b880b55f8bd39b4fb40a.png" alt="pixel art crystal cave with glowing elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Crystal Clarity</h4>
-              <p class="text-blue-600 text-sm mb-4">Mind training exercises</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 3/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-    -->
-  </div>
-</section>
-<section id="quick-actions" class="py-16 bg-white">
-  <div class="container mx-auto px-6">
-      <h3 class="text-2xl font-bold text-blue-800 mb-8">Quick Actions</h3>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-plus-circle text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">New Task</h4>
-              <p class="text-blue-600 text-sm">Create a new daily quest</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-coins text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Budget</h4>
-              <p class="text-yellow-600 text-sm">Set daily spending limits</p>
-          </div>
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-chart-line text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">Progress</h4>
-              <p class="text-blue-600 text-sm">View your journey stats</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-trophy text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Achievements</h4>
-              <p class="text-yellow-600 text-sm">Check your badges</p>
-          </div>
-      </div>
-  </div>
-</section>
+</main>
 <footer id="footer" class="bg-blue-900 text-blue-100">
-  <div class="container mx-auto px-6 py-12">
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-          <div class="space-y-4">
-              <div class="flex items-center space-x-2">
-                  <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
-                  <h4 class="text-xl font-bold">Heroic Habits</h4>
-              </div>
-              <p class="text-blue-300">Level up your life, one habit at a time.</p>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Features</h5>
-              <ul class="space-y-2">
-                  <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
-              </ul>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Support</h5>
-              <ul class="space-y-2">
-                  <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
-              </ul>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Follow Us</h5>
-              <div class="flex space-x-4">
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
-              </div>
-          </div>
-      </div>
-      <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
-          <p>© 2025 Heroic Habits. All rights reserved.</p>
-      </div>
-  </div>
-</footer>
+    <div class="container mx-auto px-6 py-12">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div class="space-y-4">
+                <div class="flex items-center space-x-2">
+                    <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
+                    <h4 class="text-xl font-bold">Heroic Habits</h4>
+                </div>
+                <p class="text-blue-300">Level up your life, one habit at a time.</p>
+            </div>
+            <div>
+                <h5 class="font-bold mb-4">Features</h5>
+                <ul class="space-y-2">
+                    <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
+                    <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
+                    <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
+                </ul>
+            </div>
+            <div>
+                <h5 class="font-bold mb-4">Support</h5>
+                <ul class="space-y-2">
+                    <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
+                    <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
+                    <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
+                </ul>
+            </div>
+            <div>
+                <h5 class="font-bold mb-4">Follow Us</h5>
+                <div class="flex space-x-4">
+                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
+                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
+                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
+            <p>© 2025 Heroic Habits. All rights reserved.</p>
+        </div>
+    </div>
+  </footer>
 </div>
         </body>
       </html>
